examples/errors/argument_function_collision.aaa
fn
    foo
args
    bar as int,
    bar as int
begin
    nop
end
